--- a/MyStr/MyStr/MyStr.vcxproj
+++ b/MyStr/MyStr/MyStr.vcxproj
@@ -123,10 +123,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="MyArr.cpp" />
     <ClCompile Include="MyStr.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="MyArr.h" />
     <ClInclude Include="MyStr.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
