--- a/MyStr/MyStr/MyStr.vcxproj
+++ b/MyStr/MyStr/MyStr.vcxproj
@@ -124,12 +124,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="MyArr.cpp" />
+    <ClCompile Include="MyQueue.cpp" />
     <ClCompile Include="MyStack.cpp" />
     <ClCompile Include="MyStr.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyArr.h" />
+    <ClInclude Include="MyQueue.h" />
     <ClInclude Include="MyStack.h" />
     <ClInclude Include="MyStr.h" />
   </ItemGroup>
